hphp/test/zend/good/ext-spl/bug38325.php
<?php
spl_autoload_register();
new ThisClassDoesNotExistEverFoo();
?>