hphp/test/zend/bad/ext-posix/posix_getrlimit.php
<?php

var_dump(posix_getrlimit());

?>